# SysGuard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  db.py  engine.py  helper_process.py  launcher.py  monitor_gui.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
